--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ include_directories(${SDL2_INCLUDE_DIRS} src)
 
 add_executable(
     SnakeGame src/main.cpp src/game.cpp src/controller.cpp src/renderer.cpp src/snake.cpp
-    src/SlowDown.cpp src/Utils.cpp)
+    src/SlowDown.cpp src/Utils.cpp src/Obstacles.cpp)
 
 string(STRIP ${SDL2_LIBRARIES} SDL2_LIBRARIES)
 target_link_libraries(SnakeGame ${SDL2_LIBRARIES})
